# factorio-updater

./: .gitignore  Cargo.toml  TODO.md
src/: functions.rs  lib.rs  structs.rs
src/app/: mod.rs
src/app/api/: mod.rs  structs.rs
src/app/components/: input.rs  mod.rs  popup.rs
src/app/screens/: login.rs  main.rs  mod.rs
src/config/: mod.rs
src/steps/: items.rs  mod.rs  update.rs  updates.rs
