[package]
name = "factorio-updater"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
reqwest = { version = "0.12.24", features = ["json", "stream"] }
clap = { version = "4.5.51", features = ["derive"] }
serde_json = "1.0.145"
zip = "6.0.0"
indicatif = "0.18.2"
console = "0.16.1"
semver = "1.0.27"
tokio = { version = "1.48.0", features = ["full"] }
futures-util = "0.3.31"
humansize = "2.1.3"
tempdir = "0.3.7"
uuid = { version = "1.18.1", features = ["v4"] }
