[package]
name = "factorio-updater"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
reqwest = { version = "0.12.24", features = ["json", "stream"] }
clap = { version = "4.5.51", features = ["derive", "env"] }
serde_json = "1.0.145"
zip = "7.0.0"
indicatif = "0.18.2"
console = "0.16.1"
semver = "1.0.27"
tokio = { version = "1.48.0", features = ["full"] }
futures-util = "0.3.31"
tempdir = "0.3.7"
uuid = { version = "1.18.1", features = ["v4"] }
ratatui = "0.29.0"
crossterm = { version = "0.28.0", features = ["event-stream"] }
dirs = "6.0.0"
tui-input = { version = "0.14.0", features = ["crossterm"] }
async-trait = "0.1.89"
figlet-rs = "0.1.5"
simple-logging = "2.0.2"
log = "0.4.29"
